--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <body>
     <h1>Sungwoo, Kim</h1>
     <p>저는 프로그래밍 배우는 김성우입니다.</p>
+    <h2>스킬셋</h2>
+    <ul>
+        <li>HTLM</li>
+        <li>CSS</li>
+        <li>Javascripts/ES6</li>
+        <li>Node.js/Express</li>
+        <li>React.js</li>
+        <li>RDBMS</li>
+    </ul>
 </body>
 
 </html>
