add team member list

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <li>React.js</li>
         <li>RDBMS</li>
     </ul>
+
+    <h2>팀원 정보</h2>
+    <ol>
+        <li>김성우</li>
+        <li>장희재</li>
+        <li>최석준</li>
+    </ol>
+
 </body>
 
 </html>
