--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <li>김성우</li>
         <li>신준혁</li>
         <li>조우리</li>
+        <li>조우리</li>
+        <li>조우리</li>
+        <li>조우리</li>
     </ol>
 
     <h2>프로젝트</h2>
