--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <ol>
         <li>김성우</li>
         <li>신준혁</li>
+        <li>신준혁</li>
+        <li>신준혁</li>
         <li>조우리</li>
         <li>조우리</li>
         <li>조우리</li>
